en/docs/api-manager/4.3.0/reference/product-apis/overview.md
# RESTful APIs

The following topics list the APIs exposed from the API Publisher, Developer Portal, Admin Portal, Gateway, Service Catalog and Devops which you can use to create and manage APIs. You can consume APIs directly through their UIs or, an external REST client like cURL.

<br>
<table>
  <tr>
    <td nowrap="true"><a href="../../../reference/product-apis/publisher-apis/publisher-v4/publisher-v4/">WSO2 Publisher API v4</a></td>
    <td rowspan="6" class="md-typeset__td"><b>WSO2 recommends that you use the latest REST APIs</b> as it is up to date and has support for the latest WSO2 API Manager 4.3.0 features.</td>
  </tr>
  <tr>
    <td nowrap="true"><a href="../../../reference/product-apis/devportal-apis/devportal-v3/devportal-v3/">WSO2 Developer Portal API v3</a></td>
  </tr>
   <tr>
    <td nowrap="true"><a href="../../../reference/product-apis/admin-apis/admin-v4/admin-v4/">WSO2 Admin Portal API v4</a></td>
  </tr>
  <tr>
    <td nowrap="true"><a href="../../../reference/product-apis/gateway-apis/gateway-v2/gateway-v2/">WSO2 Gateway API v2</a></td>
  </tr>
  <tr>
    <td nowrap="true"><a href="../../../reference/product-apis/service-catalog-apis/service-catalog-v1/service-catalog-v1/">WSO2 Service Catalog API v1</a></td>
  </tr>
  <tr>
    <td nowrap="true"><a href="../../../reference/product-apis/devops-apis/devops-v0/devops-v0/">WSO2 Devops API v0</a></td>
  </tr>
</table>


## Quick Start

Following Postman collection provides quick start guide for WSO2 API Manager REST APIs. It can be used to,
 
 * Create, publish, subscribe and invoke a sample REST API
 * Create, subscribe and invoke a sample API Product 

[![Run in Postman](https://run.pstmn.io/button.svg)](https://app.getpostman.com/run-collection/25611032-aa201bbc-7bdf-4e2c-afeb-d5494ef50f91)
